<resources>
    <string name="app_name">Jodoh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="subscription">Subscription</string>
    <string name="mobile_number_email">Mobile Number / Email</string>
    <string name="password">password</string>
    <string name="or_sign_up">Or, sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="accept_term_and_conditions">Accept term and conditions</string>
    <string name="package_a">Package A</string>
    <string name="package_b">Package B</string>
    <string name="package_c">Package C</string>
    <string name="package_d">Package D</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_id">Login ID</string>
    <string name="main_no_items">No orders to display</string>
    <string name="title_activity_featured">FeaturedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="popular">POPULAR</string>
    <string name="online">ONLINE</string>
    <string name="activity">ACTIVITY</string>
    <string name="package_name">com.easytravelapp17.jodoh</string>
    <string name="welcome">Welcome </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="OnlineURL">http://13.59.107.215:8031/user-list</string>
    <string name="subscription_url">http://13.59.107.215:8031/subscription</string>
    <string name="user_url">http://13.59.107.215:8031/user/1</string>
    <string name="copyright">Copyright 2017</string>
    <string name="welcome_guest">Welcome Guest!!</string>
    <string name="splash_screen_description">Easy splash screen</string>
    <string name="search">Search</string>
    <string name="choose_me">Choose me</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="whishlist">Whishlist</string>
    <string name="rate">Rate</string>
    <string name="pictures">Pictures</string>
    <string name="education_info">Education Info</string>


    <string name="hello_world">Hello world!</string>
    <string name="retake_pic">Retake Picture</string>
    <string name="from_gallery">From Gallery</string>
    <string name="update_profile_picture">Update Picture</string>

</resources>
