<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/loginIdEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/loginIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile_number_email"
        android:inputType="textPersonName"
        android:layout_above="@+id/passwordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/signInButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_above="@+id/signUpTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="validateUser"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:clickable="true"
        android:onClick="openRegister"
        android:text="@string/or_sign_up" />

</RelativeLayout>